--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^4.3.7",
+    "react-native-progress": "^3.5.0",
     "react-native-segment-controller": "^1.0.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.8.0",
