--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.3.0",
     "formik": "^1.0.1",
     "moment": "^2.22.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-alphabetlistview": "^0.3.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^4.3.7",
     "react-native-progress": "^3.5.0",
     "react-native-segment-controller": "^1.0.0",
+    "react-native-uuid-generator": "^4.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.8.0",
     "react-redux": "^5.0.7",
