--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "firebase": "^5.3.0",
+    "firebase": "5.0.3",
     "formik": "^1.0.1",
     "moment": "^2.22.2",
     "react": "16.3.1",
@@ -20,6 +20,7 @@
     "react-native-segment-controller": "^1.0.0",
     "react-native-uuid-generator": "^4.0.1",
     "react-native-vector-icons": "^4.6.0",
+    "react-native-view-more-text": "^2.0.1",
     "react-navigation": "^2.8.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
