--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "dependencies": {
     "firebase": "5.0.3",
     "formik": "^1.0.1",
+    "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-alphabetlistview": "^0.3.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
-    "react-native-firebase": "^4.3.7",
+    "react-native-modal-selector": "^0.0.27",
     "react-native-progress": "^3.5.0",
     "react-native-segment-controller": "^1.0.0",
     "react-native-uuid-generator": "^4.0.1",
