--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-alphabetlistview": "^0.3.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
+    "react-native-image-picker": "^0.26.10",
     "react-native-modal-selector": "^0.0.27",
     "react-native-progress": "^3.5.0",
     "react-native-segment-controller": "^1.0.0",
