--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "firebase": "5.0.3",
     "formik": "^1.0.1",
+    "immutability-helper": "^2.7.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "react": "16.3.1",
