--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "formik": "^1.0.1",
     "immutability-helper": "^2.7.1",
     "lodash": "^4.17.10",
+    "merge": "^1.2.0",
     "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-alphabetlistview": "^0.3.0",
+    "react-native-atoz-listview": "^0.0.7",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-image-picker": "^0.26.10",
     "react-native-modal-selector": "^0.0.27",
     "react-native-progress": "^3.5.0",
+    "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-segment-controller": "^1.0.0",
     "react-native-uuid-generator": "^4.0.1",
     "react-native-vector-icons": "^4.6.0",
