--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,8 +18,16 @@ allprojects {
         mavenLocal()
         jcenter()
         maven {
+            url "https://maven.google.com"
+        }
+        maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
     }
+}
+
+ext {
+    compileSdkVersion = 26
+    supportLibVersion = "26.1.0"
 }
