--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^1.0.0",
     "firebase": "5.0.3",
     "formik": "^1.0.1",
     "immutability-helper": "^2.7.1",
@@ -17,14 +18,13 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-alphabetlistview": "^0.3.0",
-    "react-native-atoz-listview": "^0.0.7",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-image-picker": "^0.26.10",
     "react-native-modal-selector": "^0.0.27",
-    "react-native-progress": "^3.5.0",
-    "react-native-section-list-get-item-layout": "^2.2.3",
+    "react-native-push-notification": "^3.1.1",
     "react-native-segment-controller": "^1.0.0",
+    "react-native-slider": "^0.11.0",
     "react-native-uuid-generator": "^4.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-native-view-more-text": "^2.0.1",
