--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-alphabetlistview": "^0.3.0",
+    "react-native-communications": "^2.2.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-image-picker": "^0.26.10",
+    "react-native-image-preview": "^0.3.1",
+    "react-native-image-zoom-viewer": "^2.2.14",
+    "react-native-lightbox": "^0.7.0",
     "react-native-modal-selector": "^0.0.27",
     "react-native-push-notification": "^3.1.1",
     "react-native-segment-controller": "^1.0.0",
