--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,7 +99,7 @@ android {
 
     defaultConfig {
         applicationId "com.company"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -138,13 +138,19 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-push-notification')
-    compile project(':react-native-image-picker')
-    compile project(':react-native-uuid-generator')
-    compile project(':react-native-vector-icons')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:26.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-push-notification')
+    implementation project(':react-native-image-picker')
+    implementation project(':react-native-uuid-generator')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-firebase')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.google.firebase:firebase-firestore:17.1.0"
+    implementation "com.google.firebase:firebase-storage:16.0.1"
+    implementation "com.google.firebase:firebase-auth:16.0.3"
+    implementation "com.google.android.gms:play-services-base:15.0.1"
+    implementation "com.google.firebase:firebase-core:16.0.3"
+    implementation "com.android.support:appcompat-v7:26.0.1"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
@@ -154,3 +160,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
+// apply plugin: 'com.google.gms.google-services'
+// com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
