--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,12 @@
 
 buildscript {
     repositories {
+         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.google.gms:google-services:4.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +16,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         mavenLocal()
         jcenter()
         maven {
@@ -31,3 +33,4 @@ ext {
     compileSdkVersion = 26
     supportLibVersion = "26.1.0"
 }
+
